--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,14 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.0</version>
 		</dependency>
+		<!-- ORDS Adapter -->
+		<dependency>
+			<groupId>com.phyrextsai.ordsadapter</groupId>
+			<artifactId>ords-adapter-boilerplate</artifactId>
+			<version>1.0.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/resources/libs/ords-adapter-boilerplate-1.0.0.jar</systemPath>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -129,6 +137,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<includeSystemScope>true</includeSystemScope>
+				</configuration>
 				<executions>
           <execution>
             <goals>
